# cpp-classicfps-gameengine

./: .gitignore  CMakeLists.txt  ROADMAP.MD
_DOCS_/: 01.MD  02.MD  03.MD  04.MD  05.MD  06.MD  07.MD  08.MD  09.MD  10.MD  11.MD
include/core/: Camera.hpp  Engine.hpp  Input.hpp  Player.hpp  Window.hpp
include/graphics/: Camera.hpp  Mesh.hpp  OpenGL.hpp  Shader.hpp  ShaderSource.hpp
include/math/: Mat4.hpp  Vec3.hpp
include/physics/: Physics.hpp  PhysicsSystem.hpp
include/player/: PlayerController.hpp
shaders/: basic.frag  basic.vert  fragment.glsl  vertex.glsl
src/: main.cpp
src/core/: Engine.cpp  Input.cpp  Player.cpp  Window.cpp
src/graphics/: Camera.cpp  Mesh.cpp  Shader.cpp
src/physics/: Physics.cpp  PhysicsSystem.cpp
src/player/: PlayerController.cpp
